Setting up authentication and authorization

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,9 +5,9 @@ logging.level.org.springframework.security=DEBUG
 
 cloud.aws.region.static=us-east-1
 spring.config.import=\
-  aws-parameterstore:/config/ros-lms-db,\
-  aws-parameterstore:/config/ros-lms-keys,\
-  aws-parameterstore:/config/ros-lms-app
+  aws-parameterstore:/config/gamepickd-db,\
+  aws-parameterstore:/config/gamepickd-keys,\
+  aws-parameterstore:/config/gamepickd-app
 
 
 #This property is needed to read the encrypted passwords in the database
