--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,8 +5,6 @@ rsa.public-key=classpath:certs/public.pem
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
 
-spring.cloud.aws.region.static=us-east-1
-
 spring.datasource.url=jdbc:mysql://localhost:3306/gamepickd-db
 spring.datasource.username=root
 spring.datasource.password=test123
@@ -14,6 +12,18 @@ spring.datasource.password=test123
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.connection.characterEncoding=utf-8
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# AWS credentials (dummy for S3Mock)
+spring.cloud.aws.credentials.access-key=test
+spring.cloud.aws.credentials.secret-key=test
+
+# AWS region
+spring.cloud.aws.region.static=us-east-1
+
+# S3 endpoint (pointing to S3Mock)
+spring.cloud.aws.s3.endpoint=http://localhost:9095
+spring.cloud.aws.s3.path-style-access-enabled=true
+spring.cloud.aws.s3.force-path-style=true
 
 spring.jpa.show-sql=true
 
