--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,7 +13,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jpa.properties.hibernate.connection.characterEncoding=utf-8
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# AWS credentials (dummy for S3Mock)
+# AWS credentials (dummy for S3Mock and for DynamoDB)
 spring.cloud.aws.credentials.access-key=test
 spring.cloud.aws.credentials.secret-key=test
 
@@ -24,6 +24,9 @@ spring.cloud.aws.region.static=us-east-1
 spring.cloud.aws.s3.endpoint=http://localhost:9095
 spring.cloud.aws.s3.path-style-access-enabled=true
 spring.cloud.aws.s3.force-path-style=true
+
+# DynamoDB endpoint (pointing to dynamodblocal)
+spring.cloud.aws.dynamodb.endpoint=http://localhost:8000
 
 spring.jpa.show-sql=true
 
